Fixes user controller
