# models/group_route_route.go
@@ -1,0 +1,193 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// GroupRouteRoute group route route
+//
+// swagger:model groupRouteRoute
+type GroupRouteRoute struct {
+
+	// created at
+	// Required: true
+	CreatedAt *string `json:"createdAt"`
+
+	// deleted at
+	DeletedAt *string `json:"deletedAt,omitempty"`
+
+	// description
+	// Required: true
+	Description *string `json:"description"`
+
+	// id
+	// Required: true
+	ID *int64 `json:"id"`
+
+	// method
+	// Required: true
+	Method *string `json:"method"`
+
+	// namespace Id
+	// Required: true
+	NamespaceID *int64 `json:"namespaceId"`
+
+	// route
+	// Required: true
+	Route *string `json:"route"`
+
+	// tags
+	// Required: true
+	Tags []string `json:"tags"`
+
+	// updated at
+	// Required: true
+	UpdatedAt *string `json:"updatedAt"`
+}
+
+// Validate validates this group route route
+func (m *GroupRouteRoute) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCreatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateDescription(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateMethod(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateNamespaceID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateRoute(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateTags(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUpdatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *GroupRouteRoute) validateCreatedAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("createdAt", "body", m.CreatedAt); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *GroupRouteRoute) validateDescription(formats strfmt.Registry) error {
+
+	if err := validate.Required("description", "body", m.Description); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *GroupRouteRoute) validateID(formats strfmt.Registry) error {
+
+	if err := validate.Required("id", "body", m.ID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *GroupRouteRoute) validateMethod(formats strfmt.Registry) error {
+
+	if err := validate.Required("method", "body", m.Method); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *GroupRouteRoute) validateNamespaceID(formats strfmt.Registry) error {
+
+	if err := validate.Required("namespaceId", "body", m.NamespaceID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *GroupRouteRoute) validateRoute(formats strfmt.Registry) error {
+
+	if err := validate.Required("route", "body", m.Route); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *GroupRouteRoute) validateTags(formats strfmt.Registry) error {
+
+	if err := validate.Required("tags", "body", m.Tags); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *GroupRouteRoute) validateUpdatedAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("updatedAt", "body", m.UpdatedAt); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this group route route based on context it is used
+func (m *GroupRouteRoute) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *GroupRouteRoute) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *GroupRouteRoute) UnmarshalBinary(b []byte) error {
+	var res GroupRouteRoute
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
