# models/grouproute_route.go
@@ -1,0 +1,109 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// GrouprouteRoute grouproute route
+//
+// swagger:model grouproute.Route
+type GrouprouteRoute struct {
+
+	// created at
+	// Required: true
+	CreatedAt *string `json:"createdAt"`
+
+	// deleted at
+	DeletedAt *string `json:"deletedAt,omitempty"`
+
+	// description
+	Description string `json:"description,omitempty"`
+
+	// id
+	ID int64 `json:"id,omitempty"`
+
+	// method
+	Method string `json:"method,omitempty"`
+
+	// namespace Id
+	NamespaceID int64 `json:"namespaceId,omitempty"`
+
+	// route
+	Route string `json:"route,omitempty"`
+
+	// tags
+	Tags []string `json:"tags"`
+
+	// updated at
+	// Required: true
+	UpdatedAt *string `json:"updatedAt"`
+}
+
+// Validate validates this grouproute route
+func (m *GrouprouteRoute) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCreatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUpdatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *GrouprouteRoute) validateCreatedAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("createdAt", "body", m.CreatedAt); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *GrouprouteRoute) validateUpdatedAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("updatedAt", "body", m.UpdatedAt); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this grouproute route based on context it is used
+func (m *GrouprouteRoute) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *GrouprouteRoute) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *GrouprouteRoute) UnmarshalBinary(b []byte) error {
+	var res GrouprouteRoute
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
